# apertium-fin-hun

./: .gitattributes  .travis.yml  AUTHORS  Makefile.am  apertium-fin-hun.fin-hun.dix  apertium-fin-hun.fin-hun.lrx  apertium-fin-hun.fin-hun.t1x  apertium-fin-hun.fin-hun.t2x  apertium-fin-hun.hun-fin.lrx  apertium-fin-hun.hun-fin.t1x  configure.ac  modes.xml
dev/: debug2dix.bash
test/: fin-hun-biltrans-expected.txt  fin-hun-chunker-expected.txt  fin-hun-generator-expected.txt  fin-hun-generator-gold.txt  fin-hun-postchunk-expected.txt  hun-fin-generator-expected.txt  hun-fin-generator-gold.txt  hun-fin-interchunk-expected.txt  hun-fin-lex-expected.txt  hun-fin-morph-expected.txt  hun-fin-pretransfer-expected.txt  tests.json
texts/: hu-wiki.fagylalt.text
